# rag-copy

./: README.md  app.py  data_utils.py  new.py  pyproject.toml  rag.py  resume.py  test.py  ui.py
data/: split_documents.json
data/faiss_index/: index.faiss  index.pkl
